test/spec/multi-memory/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-memory/imports.wast
;;; ARGS*: --enable-multi-memory
(;; STDOUT ;;;
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32_f32(i32:14, f32:42.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f32(f32:13.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64_f64(f64:25.000000, f64:53.000000) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
out/test/spec/multi-memory/imports.wast:89: assert_invalid passed:
  out/test/spec/multi-memory/imports/imports.2.wasm:000001e: error: function type variable out of range: 1 (max 1)
  000001e: error: OnImportFunc callback failed
called host spectest.print_i32(i32:13) =>
out/test/spec/multi-memory/imports.wast:125: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/multi-memory/imports.wast:129: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/multi-memory/imports.wast:134: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:138: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:142: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:146: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:150: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:154: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:158: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:162: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:166: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:170: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:174: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:178: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:182: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:186: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:190: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:194: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/multi-memory/imports.wast:199: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
out/test/spec/multi-memory/imports.wast:203: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
out/test/spec/multi-memory/imports.wast:207: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
out/test/spec/multi-memory/imports.wast:211: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind func, not global
out/test/spec/multi-memory/imports.wast:215: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind func, not table
out/test/spec/multi-memory/imports.wast:219: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind func, not memory
out/test/spec/multi-memory/imports.wast:259: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/multi-memory/imports.wast:263: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/multi-memory/imports.wast:268: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got i32.
out/test/spec/multi-memory/imports.wast:272: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i32.
out/test/spec/multi-memory/imports.wast:276: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i32.
out/test/spec/multi-memory/imports.wast:280: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/multi-memory/imports.wast:284: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got f32.
out/test/spec/multi-memory/imports.wast:288: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got f32.
out/test/spec/multi-memory/imports.wast:292: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got f32.
out/test/spec/multi-memory/imports.wast:296: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/multi-memory/imports.wast:300: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got i64.
out/test/spec/multi-memory/imports.wast:304: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i64.
out/test/spec/multi-memory/imports.wast:308: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i64.
out/test/spec/multi-memory/imports.wast:312: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected mutable but got immutable.
out/test/spec/multi-memory/imports.wast:317: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
out/test/spec/multi-memory/imports.wast:321: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
out/test/spec/multi-memory/imports.wast:325: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
out/test/spec/multi-memory/imports.wast:329: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind global, not func
out/test/spec/multi-memory/imports.wast:333: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind global, not table
out/test/spec/multi-memory/imports.wast:337: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind global, not memory
out/test/spec/multi-memory/imports.wast:356: assert_trap passed: uninitialized table element
out/test/spec/multi-memory/imports.wast:359: assert_trap passed: uninitialized table element
out/test/spec/multi-memory/imports.wast:360: assert_trap passed: undefined table index
out/test/spec/multi-memory/imports.wast:375: assert_trap passed: uninitialized table element
out/test/spec/multi-memory/imports.wast:378: assert_trap passed: uninitialized table element
out/test/spec/multi-memory/imports.wast:379: assert_trap passed: undefined table index
out/test/spec/multi-memory/imports.wast:411: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/multi-memory/imports.wast:415: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/multi-memory/imports.wast:420: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/multi-memory/imports.wast:424: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
out/test/spec/multi-memory/imports.wast:428: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/multi-memory/imports.wast:432: assert_unlinkable passed:
  error: max size (20) larger than declared (18)
out/test/spec/multi-memory/imports.wast:436: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/multi-memory/imports.wast:440: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
out/test/spec/multi-memory/imports.wast:445: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
out/test/spec/multi-memory/imports.wast:449: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
out/test/spec/multi-memory/imports.wast:453: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
out/test/spec/multi-memory/imports.wast:457: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind table, not func
out/test/spec/multi-memory/imports.wast:475: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/multi-memory/imports.wast:486: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/multi-memory/imports.wast:499: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/multi-memory/imports.wast:503: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/multi-memory/imports.wast:508: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
out/test/spec/multi-memory/imports.wast:512: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
out/test/spec/multi-memory/imports.wast:516: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/multi-memory/imports.wast:520: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/multi-memory/imports.wast:525: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
out/test/spec/multi-memory/imports.wast:529: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
out/test/spec/multi-memory/imports.wast:533: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
out/test/spec/multi-memory/imports.wast:537: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind memory, not func
out/test/spec/multi-memory/imports.wast:541: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind memory, not global
out/test/spec/multi-memory/imports.wast:545: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind memory, not table
out/test/spec/multi-memory/imports.wast:550: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/multi-memory/imports.wast:554: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/multi-memory/imports.wast:592: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.124.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/multi-memory/imports.wast:596: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.125.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/multi-memory/imports.wast:600: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.126.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 funcref))
          ^^^^^^
out/test/spec/multi-memory/imports.wast:604: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.127.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/multi-memory/imports.wast:609: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.128.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/multi-memory/imports.wast:613: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.129.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/multi-memory/imports.wast:617: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.130.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 funcref))
                              ^^^^^^
out/test/spec/multi-memory/imports.wast:621: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.131.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/multi-memory/imports.wast:626: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.132.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (func))
                     ^^^^^^
out/test/spec/multi-memory/imports.wast:630: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.133.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/multi-memory/imports.wast:634: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.134.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (table 0 funcref))
                     ^^^^^^
out/test/spec/multi-memory/imports.wast:638: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.135.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/multi-memory/imports.wast:643: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.136.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/multi-memory/imports.wast:647: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.137.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/multi-memory/imports.wast:651: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.138.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 funcref))
              ^^^^^^
out/test/spec/multi-memory/imports.wast:655: assert_malformed passed:
  out/test/spec/multi-memory/imports/imports.139.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
out/test/spec/multi-memory/imports.wast:665: assert_unlinkable passed:
  error: invalid import "not wasm.overloaded"
179/179 tests passed.
;;; STDOUT ;;)
